name:                fuzz
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fuzz#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable fuzz
  hs-source-dirs:      src
  other-modules:       Common, Stmt, Types, Expr
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       mtl, random, base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
